--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-loader": "^8.0.5",
     "faunadb": "^2.5.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-scripts": "^2.1.5",
+    "webpack": "^4.29.5"
   },
   "scripts": {
     "bootstrap": "node ./scripts/bootstrap-fauna-database.js",
